fix(files-grid): fix spacing for icon-container on desktop

--- a/components/views/files/grid/item/Item.less
+++ b/components/views/files/grid/item/Item.less
@@ -48,6 +48,7 @@
     justify-content: center;
     align-items: center;
     flex-grow: 1;
+    height: 162px;
     padding-top: 36px; // half of the text area height, centers icon
   }
 
